# openclaw-memory

./: .env.example  .gitignore  README.md  config.py  docker-compose.yml  install.sh  main.py  package.sh  pyproject.toml  requirements.txt  test_time_decay.py
config/: settings.yaml
nebula/: docker-compose.yaml
openclaw_memory/: __init__.py  knowledge_base.py
openclaw_memory/api/: server.py
openclaw_memory/commerce/: __init__.py  commerce_kg.py  crm_importer.py  product_profile.py  profile_builder.py  routes.py  user_profile.py
openclaw_memory/core/: ai_processor.py  consolidator.py  embeddings.py  enterprise_kg.py  evolutionary_kg.py  hybrid_recall.py  hybrid_retrieval.py  kg_manager.py  knowledge_graph.py  memory_store.py  minilm_retriever.py  multimodal.py  nebula_kg_client.py  networkx_kg_client.py  scheduler.py  summarizer.py  weaviate_client.py  workspace_parser.py
openclaw_memory/core/extraction/: README.md  __init__.py  base.py  decoder_extractor.py  encoder_extractor.py  examples.py  hybrid_extractor.py
openclaw_memory/core/profile/: __init__.py  user_profile.py
openclaw_memory/core/smart_recall/: __init__.py  integration.py  smart_recall.py
openclaw_memory/core/vector_store/: __init__.py
openclaw_memory/core/vector_store/adapters/: weaviate_adapter.py
openclaw_memory/sync/: realtime_sync.py
scripts/: cleanup_all_agents.py  cleanup_duplicates.py  cleanup_exact.py  crontab.example  health_check.py  setup.sh  start.sh  start_bg.sh  start_with_openclaw.sh  stop.sh  sync_feishu_wiki.py
tests/: test_hybrid_retrieval.py
ui/: index.html  visualization.py
